fixed overflow bug (#3676)

--- a/components/widgets/team_icon/team_icon.scss
+++ b/components/widgets/team_icon/team_icon.scss
@@ -65,7 +65,7 @@
         @include background-size(100% 100%);
         background-color: $white;
         background-repeat: no-repeat;
-        width: 44px;
+        width: 45px;
         height: 100%;
         &.TeamIcon__lg {
             width: 94px;
